# cadence

./: .gitignore  LICENSE  README  cadence.py  cadencetest.py
cadence/: .gitignore  Cargo.toml
cadence/src/: app.rs  cmdline.rs  command_words.rs  core.rs  id.rs  lib.rs  rhythms.rs  time.rs  util.rs  writer.rs
cadence/src/reporting/: basic_schedule.rs  health_check.rs  mod.rs  schedule_convergence.rs  smooth_schedule.rs
cadencewww/: manage.py
cadencewww/cadencewww/: asgi.py  middleware.py  settings.py  urls.py  wsgi.py
cadencewww/rhythms/: apps.py  forms.py  urls.py  views.py
cadencewww/rhythms/templates/rhythms/: add.html  add_daily.html  add_every_n.html  add_monthly.html  add_week_daily.html  edit.html  index.html
cadencewww/scheduling/: urls.py  views.py
cadencewww/scheduling/templates/scheduling/: delinquent.html  index.html  spoons.html
cadencewww/static/: style.css
cadencewww/templates/: base.html
cadencewww/templates/includes/: purecss_form.html
line_item/: Cargo.toml
line_item/src/: iter.rs  lib.rs
