[package]
name = "cadence"
version = "0.1.0"
authors = ["Robert Escriva <robert@rescrv.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
chrono-tz = "0.4"
rand = "0.7"
dirs = "3.0"
clap = "2.33"
line_item = { path = "../line_item" }
